app-code/beszel/beszel-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: beszel-ingress
  namespace: monitoring
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`beszel.aura`)
      kind: Rule
      middlewares:
        - name: authentik-forwardauth
          namespace: monitoring
      services:
        - name: beszel-hub-svc
          port: 8090
